--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "final project PRAXIS UNAL",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "clean": "rm -rf dist",
+    "build": "npm run clean && tsc"
   },
   "repository": {
     "type": "git",
