Mocha reports configuration done

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,7 @@ dist
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/node,visualstudiocode
+
+## Reports ##
+report
+rm -rf dist reports
