--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "clean": "rm -rf dist",
-    "build": "npm run clean && tsc"
+    "clean": "rm -rf dist report",
+    "build": "npm run clean && tsc",
+    "test:api": "npm run build && mocha -t 5000 --reporter mochawesome --reporter-options reportDir=report --recursive ./dist/test/api/*.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "@types/superagent": "^4.1.10",
     "chai": "^4.3.3",
     "mocha": "^8.3.0",
+    "mochawesome": "^6.2.2",
     "superagent": "^6.1.0",
     "typescript": "^4.2.3"
   }
