--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,13 @@
 {
-    "compilerOptions": {
-      "target": "es6",
-      "sourceMap": true,
-      "outDir": "dist",
-      "module": "commonjs",
-      "moduleResolution": "node",
-      "noUnusedParameters": true,
-      "noUnusedLocals": true
-    }
-  }
+  "compilerOptions": {
+    "target": "es6",
+    "sourceMap": true,
+    "outDir": "dist",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "noUnusedParameters": true,
+    "noUnusedLocals": true,
+    "skipLibCheck": true,
+  },
+  
+}
