--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha",
     "clean": "rm -rf dist report",
     "build": "npm run clean && tsc",
-    "test:api": "npm run build && mocha -t 5000 --reporter mochawesome --recursive ./dist/test/**/*.js"
+    "test:api": "npm run build && mocha -t 5000 --reporter mochawesome --reporter-options reportDir=report --recursive ./test/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
     "@types/mocha": "^8.2.1",
     "@types/superagent": "^4.1.10",
     "chai": "^4.3.3",
+    "http-status-codes": "^2.1.4",
     "mocha": "^8.3.0",
     "mochawesome": "^6.2.2",
     "superagent": "^6.1.0",
