--- a/package.json
+++ b/package.json
@@ -32,7 +32,13 @@
     "http-status-codes": "^2.1.4",
     "mocha": "^8.3.0",
     "mochawesome": "^6.2.2",
-    "superagent": "^6.1.0",
+    "mochawesome-screenshots": "^1.7.3",
+    "superagent": "^6.1.0"
+  },
+  "devDependencies": {
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^14.14.33",
+    "protractor": "^7.0.0",
     "typescript": "^4.2.3"
   }
 }
